--- a/src/Categories/Categories.module.css
+++ b/src/Categories/Categories.module.css
@@ -1,4 +1,4 @@
-.categories {
+.categoriesSection {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
@@ -9,13 +9,18 @@
   height: 38px;
 }
 
-li:grow {
+.categoryLink {
+  text-decoration-line: none;
+  color: rgb(221, 95, 22);
+}
+
+.category:grow {
   display: inline-block;
   width: 1.1em;
   transition: all 0.2s ease-in-out;
 }
 
-li:hover {
-  transform: scale(1.5);
+.category:hover {
+  transform: scale(1.1);
   cursor: pointer;
 }
