--- a/src/PlaceImage/PlaceImage.module.css
+++ b/src/PlaceImage/PlaceImage.module.css
@@ -1,10 +1,14 @@
-.image {
+/*.image {
   height: 200px;
   width: 300px;
   border: 15px;
-}
+}*/
 
 .image img {
   width: 100%;
-  height: 200px;
+  height: 250px;
+  align-self: center;
+  justify-self: center;
+  border-radius: 10%;
+  margin: 0px;
 }
