--- a/src/Categories/Categories.module.css
+++ b/src/Categories/Categories.module.css
@@ -14,11 +14,11 @@
   color: rgb(221, 95, 22);
 }
 
-.category:grow {
+/*.category:grow {
   display: inline-block;
   width: 1.1em;
   transition: all 0.2s ease-in-out;
-}
+}*/
 
 .category:hover {
   transform: scale(1.1);
@@ -28,6 +28,7 @@
 .navbar {
   overflow: hidden;
   background-color: #333;
+  margin-bottom: 10px;
 }
 
 .navbar a {
