--- a/src/Feedback/Feedback.module.css
+++ b/src/Feedback/Feedback.module.css
@@ -84,3 +84,25 @@ textarea:focus {
   box-shadow: 0px 10px 20px rgb(68, 139, 120);
   cursor: pointer;
 }
+
+.submittedDetails {
+  font-family: "Patrick Hand";
+  font-size: large;
+}
+
+.okButton {
+  width: 10%;
+  height: 50px;
+  border-radius: 10px;
+  border: 2px #ccc solid;
+  font-family: "Merienda";
+  background-color: rgb(13, 146, 111);
+  color: white;
+  font-size: medium;
+  margin-top: 15px;
+}
+
+.okButton:hover {
+  box-shadow: 0px 10px 20px rgb(68, 139, 120);
+  cursor: pointer;
+}
