--- a/src/Footer/Footer.module.css
+++ b/src/Footer/Footer.module.css
@@ -2,7 +2,7 @@
   background-color: gray;
   padding: 5px;
   height: 25px;
-  margin: 10px;
+  margin: 10px 0px;
   color: white;
   font-weight: bold;
   text-align: center;
