--- a/src/Place/Place.module.css
+++ b/src/Place/Place.module.css
@@ -4,3 +4,19 @@
   margin-right: auto;
   width: 30%;
 }
+
+.wallpaper {
+  background-image: url("../images/Background/Place-Details.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.title {
+  display: inline-block;
+  background-color: rgb(209, 133, 83);
+  color: white;
+  border-radius: 10px;
+  margin-bottom: 15px;
+  margin-left: 10px;
+  margin-top: 10px;
+}
