--- a/src/PlaceDetails/PlaceDetails.module.css
+++ b/src/PlaceDetails/PlaceDetails.module.css
@@ -4,6 +4,7 @@
   column-gap: 25px;
   row-gap: 25px;
 }
+
 .imageSection img {
   height: 250px;
   width: 100%;
@@ -11,4 +12,25 @@
   justify-self: center;
   border-radius: 10%;
   margin: 5px;
+}
+
+.detailsContainer {
+  display: grid;
+  grid-template-columns: 1fr 7fr;
+  column-gap: 20px;
+  margin-left: 20px;
+}
+
+.detailsTag {
+  display: inline-block;
+  background-color: rgb(209, 133, 83);
+  color: white;
+  border-radius: 10px;
+  margin-bottom: 15px;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.details {
+  margin-left: 20px;
 }
