--- a/src/PlaceImage/PlaceImage.module.css
+++ b/src/PlaceImage/PlaceImage.module.css
@@ -1,20 +1,21 @@
 /*.image {
-  height: 200px;
+height: 200px;
   width: 300px;
   border: 15px;
+  align-items: center;
+  justify-content: center;
 }*/
 
-.image img {
-  width: 100%;
-  height: 250px;
-  align-self: center;
-  justify-self: center;
+.image {
+  width: 80%;
+  height: 200px;
   border-radius: 20px;
   margin: 0px;
-  border: 5px solid blueviolet;
+  border: 5px solid #ccc;
+  box-shadow: 0px 0px 20px black;
 }
 
-.image img:hover {
-  box-shadow: 10px 10px 20px rgb(68, 139, 120);
+.image:hover {
+  box-shadow: 10px 10px 20px black;
   cursor: pointer;
 }
