Added a few more fields in Feedback form

--- a/src/Feedback/Feedback.module.css
+++ b/src/Feedback/Feedback.module.css
@@ -111,3 +111,9 @@ textarea:focus {
   color: white;
   text-decoration: none;
 }
+
+.formElements {
+  font-family: "Merienda";
+  font-size: small;
+  color: rgb(77, 77, 77);
+}
