--- a/src/PlaceDetails/PlaceDetails.module.css
+++ b/src/PlaceDetails/PlaceDetails.module.css
@@ -1,17 +1,25 @@
 .imageSection {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  list-style: none;
   column-gap: 25px;
   row-gap: 25px;
+  padding-left: 10px;
+  justify-items: center;
+  align-items: center;
 }
 
 .imageSection img {
-  height: 250px;
-  width: 100%;
-  align-self: center;
-  justify-self: center;
-  border-radius: 10%;
-  margin: 5px;
+  width: 80%;
+  height: 200px;
+  border-radius: 20px;
+  margin: 0px;
+  border: 5px solid #ccc;
+  box-shadow: 0px 0px 20px black;
+}
+
+.imageSection img:hover {
+  box-shadow: 10px 10px 20px black;
 }
 
 .detailsContainer {
