--- a/src/Home/Home.module.css
+++ b/src/Home/Home.module.css
@@ -51,3 +51,21 @@
   color: white;
   background-color: darkgray;
 }
+
+@media screen and (min-width: 150px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (min-width: 500px) and (max-width: 800px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
