--- a/src/PlacesList/PlacesList.module.css
+++ b/src/PlacesList/PlacesList.module.css
@@ -15,3 +15,21 @@
   margin-left: 10px;
   margin-top: 10px;
 }
+
+@media screen and (min-width: 150px) {
+  .placesList {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (min-width: 500px) and (max-width: 800px) {
+  .placesList {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .placesList {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
